--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
   },
   "rules": {
     "react/require-default-props": ["error"],
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "no-console": 0
   },
   "extends": [
     "eslint:recommended",
